<resources>
    <string name="app_name">Scavenger</string>

    <!-- LOGIN & SPLASH -->
    <string name="raccoon_img_content_desc">Scavenger Raccoon Image</string>
    <string name="login_user_hint">Enter Username</string>
    <string name="login_pw_hint">Enter Password</string>
    <string name="login_play">Play</string>
    <string name="login_register">Register</string>
    <string name="login_save">Save Password</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_white">White Background</string>

    <!--REGISTER SCREEN-->
    <string name="reg_img_header_desc">Register Screen Header</string>
    <string name="reg_user_hint">Enter username</string>
    <string name="reg_email_hint">Enter email</string>
    <string name="reg_pw_hint">Enter password</string>
    <string name="reg_img_desc">Register Button</string>

    <!-- MAIN SCREEN-->
    <string name="main_scavenge">scavenge</string>
    <string name="main_chest">my chest</string>
    <string name="main_redeem">redeem</string>
    <string name="main_settings">settings</string>

    <!-- SETTINGS SCREEN-->
    <string name="settings_header_desc">Settings Screen</string>
    <string name="settings_txt_notifications">Notifications</string>
    <string name="settings_txt_vibrate">In-App Vibrate</string>
    <string name="settings_txt_alert">In-App Alert Sounds</string>
    <string name="settings_txt_push">Push Notifications</string>
    <string name="settings_txt_info">Information</string>
    <string name="settings_txt_support">Support</string>
    <string name="settings_txt_privacy">Privacy Policy</string>
    <string name="settings_txt_feedback">Send Feedback</string>
    <string name="settings_btn_updates">Save Updates</string>
    <string name="settings_btn_sign_out">Sign Out</string>

    <!-- CHEST SCREEN -->
    <string name="chest_header_desc">Chest Screen</string>
    <string name="chest_btn_share_desc">Share Button</string>
    <string name="chest_btn_visit_desc">Visit Button</string>
    <string name="chest_def_text">$5 GIFT CARD TO JAMBA JUICE</string>

    <!--SCAVENGE SCREEN -->
    <string name="scv_text">Nothing found yet!</string>

    <!--COLORS-->
    <color name="teal">#82C9C7</color>
    <color name="scavenge_box_color">#81CAC8</color>
    <color name="orange">#F68C3D</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="transparent">#00000000</color>
    <color name="grey">#33000000</color>
    <color name="light_teal">#C7E8E7</color>
    <color name="blue">#547DBF</color>

    <!--DEFAULTS-->
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scavenge">Scavenge</string>

    <string name="default_number">11</string>
    <string name="default_text">Scavenger</string>

    <string name="facebook_app_id">1662821687280864</string>
    <string name="title_activity_maps">Map</string>
</resources>
