<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/reg_img_header"
        android:background="@drawable/register_header"
        android:contentDescription="@string/reg_img_header_desc"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_et_email"
        android:hint="@string/reg_email_hint"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#00000000"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_et_username"
        android:hint="@string/reg_user_hint"
        android:layout_above="@id/reg_et_email"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#00000000"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_et_pw"
        android:hint="@string/reg_pw_hint"
        android:inputType="textPassword"
        android:layout_below="@id/reg_et_email"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="#00000000"/>

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_btn_register"
        android:contentDescription="@string/reg_img_desc"
        android:background="@drawable/register_registerbutton"
        android:layout_below="@id/reg_et_pw"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />
</RelativeLayout>