<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/teal"
    android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/chest_row_number"
            android:textColor="@color/light_teal"
            android:text="@string/default_number"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@color/teal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/chest_row_text"
            android:textColor="@color/black"
            android:text="@string/chest_def_text"
            android:textSize="20sp"
            android:maxLength="50"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_weight="7"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/light_teal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/chest_button_set"
            android:layout_gravity="center"
            android:background="@color/light_teal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chest_row_share"
                android:contentDescription="@string/chest_btn_share_desc"
                android:background="@drawable/chest_share"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chest_row_visit"
                android:contentDescription="@string/chest_btn_visit_desc"
                android:background="@drawable/chest_visit"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>


</LinearLayout>