<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/teal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/raccoon_img_content_desc"
        android:id="@+id/main_raccoon_img"
        android:src="@drawable/splash_logo_med"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:paddingRight="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_bar_scav_chest"
        android:layout_below="@id/main_raccoon_img"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_rel_scavenge"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_btn_scav"
                android:contentDescription="@string/main_scavenge"
                android:background="@drawable/main_scavbutton_med"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_text_scav"
                android:text="@string/main_scavenge"
                android:layout_below="@id/main_btn_scav"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_rel_chest">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_btn_chest"
                android:contentDescription="@string/main_chest"
                android:background="@drawable/main_chestbutton_med"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_text_chest"
                android:text="@string/main_chest"
                android:layout_below="@id/main_btn_chest"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingLeft="5dp"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_bar_invite_settings"
        android:layout_below="@id/main_bar_scav_chest"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_rel_invite"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_btn_invite"
                android:contentDescription="@string/main_invite"
                android:background="@drawable/main_invitebutton_med"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_text_invite"
                android:text="@string/main_invite"
                android:layout_below="@id/main_btn_invite"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_rel_settings">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_btn_settings"
                android:contentDescription="@string/main_settings"
                android:background="@drawable/main_settingsbutton_med"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_text_settings"
                android:text="@string/main_settings"
                android:layout_below="@id/main_btn_settings"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingLeft="11dp"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>